<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Snap">Button</string>
    <string name="Left">Button</string>
    <string name="Right">Button</string>
    <string name="ImageGallery">TODO</string>
</resources>
